kubernetes/http/observer-ingress-https.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observer
  namespace: observer
  annotations:
    kubernetes.io/ingress.global-static-ip-name: cluster-01-observer-ingress
    networking.gke.io/managed-certificates: observer
    kubernetes.io/ingress.class: gce
    networking.gke.io/v1beta1.FrontendConfig: observer
spec:
  defaultBackend:
    service:
      name: observer-api
      port:
        number: 80
